--- a/Collector1/app/build.gradle
+++ b/Collector1/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "26"
 
     defaultConfig {
-        applicationId "edu.dartmouth.cs.myrunscollector"
+        applicationId "com.michaeltroger.collector1"
         minSdkVersion 24
         targetSdkVersion 26
     }
