--- a/Prediction1/app/src/main/AndroidManifest.xml
+++ b/Prediction1/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="edu.dartmouth.cs.myrunscollector"
+    package="com.michaeltroger.prediction1"
     android:versionCode="1"
     android:versionName="1.0" >
 
@@ -10,7 +10,7 @@
         android:icon="@drawable/ic_icon"
         android:label="@string/app_name">
         <activity
-            android:name="edu.dartmouth.cs.myrunscollector.CollectorActivity"
+            android:name=".CollectorActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait" >
             <intent-filter>
@@ -21,7 +21,7 @@
         </activity>
         
         
-        <service android:name="edu.dartmouth.cs.myrunscollector.SensorsService" />
+        <service android:name=".SensorsService" />
         
     </application>
 
