--- a/Collector1/app/build.gradle
+++ b/Collector1/app/build.gradle
@@ -20,4 +20,6 @@ android {
 
 dependencies {
     compile files('libs/weka.jar')
+    compile 'com.jakewharton:butterknife:8.7.0'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.7.0'
 }
