--- a/Prediction1/app/build.gradle
+++ b/Prediction1/app/build.gradle
@@ -20,5 +20,7 @@ android {
 
 dependencies {
     compile files('libs/weka.jar')
-    compile 'com.android.support:recyclerview-v7:26.+'
+    compile 'com.android.support:recyclerview-v7:26.0.0-alpha1'
+    compile 'com.jakewharton:butterknife:8.7.0'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.7.0'
 }
