Use native android binding and refactoring

--- a/Prediction1/app/build.gradle
+++ b/Prediction1/app/build.gradle
@@ -2,9 +2,10 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 26
-    buildToolsVersion "26"
+    buildToolsVersion "26.0.1"
 
     defaultConfig {
+        multiDexEnabled true
         applicationId "com.michaeltroger.prediction1"
         minSdkVersion 24
         targetSdkVersion 26
@@ -16,11 +17,13 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
         }
     }
+    dataBinding {
+        enabled true
+    }
 }
 
 dependencies {
     compile files('libs/weka.jar')
     compile 'com.android.support:recyclerview-v7:26.0.0-alpha1'
-    compile 'com.jakewharton:butterknife:8.7.0'
-    annotationProcessor 'com.jakewharton:butterknife-compiler:8.7.0'
+    compile 'com.android.support:appcompat-v7:26.0.0-alpha1'
 }
