--- a/Collector1/app/build.gradle
+++ b/Collector1/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 26
-    buildToolsVersion "26"
+    buildToolsVersion "26.0.1"
 
     defaultConfig {
         applicationId "com.michaeltroger.collector1"
@@ -18,7 +18,7 @@ android {
     }
 
     dataBinding {
-        enabled = true
+        enabled true
     }
 }
 
