--- a/Prediction1/app/build.gradle
+++ b/Prediction1/app/build.gradle
@@ -9,6 +9,13 @@ android {
         applicationId "com.michaeltroger.prediction1"
         minSdkVersion 24
         targetSdkVersion 26
+        jackOptions {
+            enabled true
+        }
+        compileOptions {
+            sourceCompatibility JavaVersion.VERSION_1_8
+            targetCompatibility JavaVersion.VERSION_1_8
+        }
     }
 
     buildTypes {
