--- a/Collector1/app/build.gradle
+++ b/Collector1/app/build.gradle
@@ -8,6 +8,13 @@ android {
         applicationId "com.michaeltroger.collector1"
         minSdkVersion 24
         targetSdkVersion 26
+        jackOptions {
+            enabled true
+        }
+        compileOptions {
+            sourceCompatibility JavaVersion.VERSION_1_8
+            targetCompatibility JavaVersion.VERSION_1_8
+        }
     }
 
     buildTypes {
