--- a/Collector1/app/src/main/AndroidManifest.xml
+++ b/Collector1/app/src/main/AndroidManifest.xml
@@ -1,13 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.michaeltroger.collector1"
-    android:versionCode="1"
-    android:versionName="1.0" >
+    package="com.michaeltroger.featurecollector">
 
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
-        android:icon="@drawable/ic_icon"
+        android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name">
         <activity
             android:name=".CollectorActivity"
